[workspace]
members = [
   "auth/casbin",
   "auth/cookie-auth",
   "auth/cookie-session",
   "auth/redis-session",
   "auth/simple-auth-server",
   "background-jobs",
   "basics/basics",
   "basics/error-handling",
   "basics/hello-world",
   "basics/nested-routing",
   "basics/state",
   "basics/static-files",
   "basics/todo",
   "cors/backend",
   "data-factory",
   "databases/diesel",
   "databases/mongodb",
   "databases/postgres",
   "databases/redis",
   "databases/sqlite",
   "docker",
   "forms/form",
   "forms/multipart-s3",
   "forms/multipart",
   "graphql/async-graphql",
   "graphql/juniper-advanced",
   "graphql/juniper",
   "guards",
   "http-proxy",
   "https-tls/awc-https",
   "https-tls/openssl-auto-le",
   "https-tls/openssl",
   "https-tls/rustls-client-cert",
   "https-tls/rustls",
   "json/json-decode-error",
   "json/json-error",
   "json/json-validation",
   "json/json",
   "json/jsonrpc",
   "middleware/middleware-encrypted-payloads",
   "middleware/middleware-ext-mut",
   "middleware/middleware-http-to-https",
   "middleware/middleware",
   "protobuf",
   "run-in-thread",
   "server-sent-events",
   "shutdown-server",
   "templating/askama",
   "templating/fluent",
   "templating/handlebars",
   "templating/minijinja",
   "templating/sailfish",
   "templating/tera",
   "templating/tinytemplate",
   "templating/yarte",
   "unix-socket",
   "websockets/autobahn",
   "websockets/chat-actorless",
   "websockets/chat-broker",
   "websockets/chat-tcp",
   "websockets/chat",
   "websockets/echo-actorless",
   "websockets/echo",
]
resolver = "2"

[workspace.dependencies]
actix = "0.13"
actix-broker = "0.4.2"
actix-codec = "0.5"
actix-cors = "0.6"
actix-files = "0.6"
actix-http = "3"
actix-identity = "0.5"
actix-multipart = "0.4"
actix-protobuf = "0.9"
actix-session = "0.7"
actix-test = "0.1"
actix-tls = "3.0"
actix-utils = "3"
actix-web = "4"
actix-web-actors = "4.1"
actix-web-lab = "0.18"
actix-ws = "0.2.5"
awc = "3"

derive_more = "0.99.7"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.13.1", features = ["sync"] }
