[package]
name = "basics"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = "../.."

[dependencies]
futures = "0.1"
log = "0.4"
env_logger = "0.5"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# cli
structopt = "0.2"
structopt-derive = "0.2"

actix = "0.5"
actix-remote = "0.0.1"