[package]
name = "actix_redis"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-rt = "0.2"
actix-web = { git = "https://github.com/actix/actix-web.git" }
actix-redis = "0.5"
futures = "0.1"
redis-async = "0.4"
serde = "1.0"
serde_derive = "1.0"
env_logger = "0.6"
