[package]
authors = ["Dan Munckton <dangit@munckfish.net>"]
name = "actix-todo"
version = "0.1.0"
workspace = ".."
edition = "2018"

[dependencies]
actix-web = "1.0.0-alpha.3"
actix-files = "0.1.0-alpha.2"
actix-session = "0.1.0-alpha.3"
dotenv = "0.13.0"
env_logger = "0.5.10"
futures = "0.1.22"
log = "0.4.3"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
tera = "0.11.8"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.3.2"
