[package]
name = "async_db"
version = "0.1.0"
authors = ["Darin Gordon <dkcdkg@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "^0.6"
dotenv = "0.10"
env_logger = "0.5"
failure = "0.1.1"
futures = "0.1"
num_cpus = "1.8.0"
r2d2 = "0.8.2"
r2d2_sqlite = "0.5.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
