[package]
name = "awc_examples"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
actix-rt = "0.2.2"
actix-web = { version="1.0.0", features=["ssl"] }

futures = "0.1"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
validator = "0.6.3"
validator_derive = "0.6.5"
env_logger = "0.5.9"
