[package]
name = "awc_examples"
version = "2.0.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
actix-rt = "1.0.0"
actix-web = { version="2.0.0", features=["openssl"] }

env_logger = "0.7"
futures = "0.3.1"
serde = { version = "1.0.43", features = ["derive"] }
serde_json = "1.0.16"
validator = "0.10"
validator_derive = "0.10"
