[package]
name = "async_ex2"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
actix-rt = "1.0.0"
actix-web = { version="2.0.0-alpha.6", features=["openssl"] }
actix-multipart = "0.2.0-alpha.2"
actix-service = "1.0.0"
bytes = "0.5.2"
env_logger = "0.6.1"
futures = "0.3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0.90"
serde_json = "1.0.39"
time = "0.1.42"
validator = "0.8.0"
validator_derive = "0.8.0"
