[package]
name = "async_ex2"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = { version="2.0.0", features=["openssl"] }
actix-service = "1.0.0"
bytes = "0.5.3"
env_logger = "0.6.1"
futures = "0.3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0.90"
serde_json = "1.0.39"
time = "0.1.42"
