[package]
name = "async_ex2"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-service = "1.0.0"
bytes = "0.5.3"
env_logger = "0.7"
futures = "0.3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.39"
time = "0.1.42"

[dev-dependencies]
actix-rt = "1"
