[package]
name = "async_pg"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"


[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
deadpool-postgres = "0.4.3"
derive_more = "0.99.2"
serde = { version = "1.0.104", features=["derive"] }
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
tokio-postgres = "0.5.1"
