[package]
name = "background-jobs"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web.workspace = true

apalis = { version = "0.6.0-rc.2" }
apalis-redis = { version = "0.6.0-rc.2" }
chrono.workspace = true
color-eyre.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
eyre.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util.workspace = true
