[package]
name = "background-jobs"
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-web.workspace = true

apalis = { version = "0.6", features = ["limit"] }
apalis-redis = { version = "0.6" }
chrono.workspace = true
color-eyre.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
eyre.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util.workspace = true
