[package]
name = "basics"
version = "2.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = ".."
edition = "2018"

[dependencies]
actix-rt = "1.0.0-alpha.3"
actix-web = "2.0.0-alpha.3"
actix-files = "0.2.0-alpha.3"
actix-session = "0.3.0-alpha.3"
actix-utils = "1.0.0-alpha.3"

futures = "0.3.1"
env_logger = "0.5"
bytes = "0.5"
