[package]
name = "cookie-session"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = ".."
edition = "2018"

[dependencies]
actix-web = { git="https://github.com/actix/actix-web.git" }
actix-session = { git="https://github.com/actix/actix-web.git" }

futures = "0.1"
time = "0.1"
env_logger = "0.6"
