[package]
name = "diesel-example"
version = "2.0.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0-alpha.3"
actix-web = "2.0.0-alpha.3"

bytes = "0.5.2"
futures = "0.3.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"

diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8.7"
