[package]
name = "diesel-example"
version = "1.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = ".."
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0-rc"

bytes = "0.4"
env_logger = "0.6"
futures = "0.3.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"
