[package]
name = "actix-graphql-demo"
version = "2.0.0"
authors = ["Dwi Sulfahnur <hello@dwisulfahnur.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0-rc"
actix-rt = "1.0.0"
futures = "0.3.1"

juniper = "0.13"

mysql = "16.1.0"
r2d2 = "0.8"
r2d2_mysql = "16.0"

log = "0.4"
env_logger = "0.6.2"
dotenv = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

uuid = {"version" = "0.7", "features" = ["serde", "v4"]}