[package]
name = "http-proxy"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true, features = ["openssl"] }
awc = "3"

clap = { version = "4", features = ["derive"] }
env_logger.workspace = true
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log.workspace = true
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.13.1", features = ["sync"] }
tokio-stream = { version = "0.1.3", features = ["sync"] }
url = "2.2"
