[package]
name = "http-proxy"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true, features = ["openssl"] }
awc.workspace = true

clap = { version = "4", features = ["derive"] }
env_logger.workspace = true
futures-util.workspace = true
log.workspace = true
reqwest = { version = "0.11", features = ["stream"] }
tokio.workspace = true
tokio-stream = { version = "0.1.3", features = ["sync"] }
url = "2.2"
