[package]
name = "http-proxy"
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = { workspace = true, features = ["openssl"] }
awc.workspace = true

clap = { version = "4", features = ["derive"] }
env_logger.workspace = true
futures-util.workspace = true
log.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1.3", features = ["sync"] }
url = "2.2"
