[package]
name = "jsonrpc-example"
version = "2.0.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"
workspace = ".."

[dependencies]
actix-web = "2.0.0-alpha.3"
actix-rt = "1.0.0-alpha.3"
bytes = "0.5"
env_logger = "0.6"
futures = "0.3.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
