[package]
name = "jsonrpc-example"
version = "2.0.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"
workspace = ".."

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
bytes = "0.5"
env_logger = "0.7"
futures = "0.3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
