[package]
name = "juniper-advanced"
version = "2.0.0"
authors = ["Dwi Sulfahnur <hello@dwisulfahnur.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.1"

juniper = "0.14"

mysql = "17"
r2d2 = "0.8"
r2d2_mysql = "17.0"

dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
