[package]
authors = ["pyros2097 <pyros2097@gmail.com>"]
edition = "2018"
name = "juniper-example"
version = "0.2.0"

[dependencies]
actix-web = "3"
env_logger = "0.7.1"
futures = "0.3"
juniper = {git = "https://github.com/graphql-rust/juniper", branch = "master"}
juniper_actix = {git = "https://github.com/graphql-rust/juniper", branch = "master"}
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
