[package]
name = "multipart-async-std-example"
version = "0.3.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Actix Web with Async/Await"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/actix/examples"
readme = "README.md"

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.1"
async-std = "1.4.0"
sanitize-filename = "0.2"
