[package]
name = "multipart-s3"
version = "0.1.0"
authors = ["cheolgyu <38715510+cheolgyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
actix-multipart = "0.2.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
rusoto_s3 = "0.43.0-beta.1"
rusoto_core = "0.43.0-beta.1"
bytes = { version = "0.5", features = ["serde"] }
serde = { version = "1.0.104", features=["derive"] }
serde_json = "1.0"
serde-value = "0.6.0"
dotenv = "0.15.0"