[package]
name = "actix-web-upload-example"
version = "0.0.2"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Actix Web with Async/Await"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/bevanhunt/actix-web-upload-example"
readme = "README.md"

[dependencies]
futures = "0.3.1"
actix-multipart = "0.2.0-alpha.1"
actix-web = "2.0.0-alpha.1"
