[package]
name = "r2d2-example"
version = "1.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0-rc"

futures = "0.3.1"
env_logger = "0.6"
uuid = { version = "0.8", features = ["v4"] }

r2d2 = "0.8"
r2d2_sqlite = "0.8"
rusqlite = "0.16"
