[package]
name = "actix_rbatis"
version = "0.1.0"
authors = ["ywnv <47468136+ywnv@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

# json (required)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date time (required)
chrono = { version = "0.4", features = ["serde"] }

# logging (required)
log = "0.4"
fast_log="1.2.2"

rbatis-core = { version = "1.6.32", features = ["all"]}
rbatis =  { version = "1.6.32" } 
rbatis-macro-driver = { version = "1.6.32" }

lazy_static = "1.4.0"

